--- a/app/assets/stylesheets/views/cameras/single/_info.scss
+++ b/app/assets/stylesheets/views/cameras/single/_info.scss
@@ -111,6 +111,10 @@
   }
 }
 
+.settings-modal-width .margin-top-8 {
+  margin-top: 8px;
+}
+
 @media (max-width: 780px) {
 
   .image-placeholder-detail-page{
@@ -245,7 +249,7 @@
 .settings-id {
   width: 168px;
   padding-left: 10px;
-  margin-top: 3px;
+  margin-top: 8px;
 }
 #camera-settings .test-snapshot{
   float: left;
@@ -442,8 +446,8 @@ p#search-notes {
   max-width: 420px;
 }
 
-.width-30 {
-  width: 35%;
+.width-25 {
+  width: 25%;
 }
 
 @media (min-width: 600px) {
@@ -462,7 +466,7 @@ p#search-notes {
 
 @media (max-width: 600px) {
 
-  .width-30 {
+  .width-25 {
     width: 30%;
   }
 
