--- a/app/assets/stylesheets/views/cameras/single/_logs.scss
+++ b/app/assets/stylesheets/views/cameras/single/_logs.scss
@@ -89,7 +89,7 @@
   outline-color: #eaeaea;
   padding: 0;
   position: relative;
-  top: 0;
+  top: 1px;
   transition: all 0.2s ease-in-out 0s;
   width: 14px;
   z-index: 1;
